commit final change save to drive

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ML_Accelerometer</string>
+    <string name="export_data">Export Data</string>
 </resources>
